--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'UD'
 - !lcsh 'United States. Army. Infantry -- Drill and tactics'
+- GITenberg
 title: 'Infantry Drill Regulations, United States Army, 1911
 
   Corrected to April 15, 1917 (Changes Nos. 1 to 19)'
